close #759 bfc fixes border on events newsletter center vertical new image on small box

--- a/_sass/bootstrap/_card.scss
+++ b/_sass/bootstrap/_card.scss
@@ -205,6 +205,11 @@
     object-fit: cover;
     margin-top: 10px;
   }
+  &.medium {
+    height: 250px;
+    object-fit: cover;
+    margin-top: 10px;
+  }
   &.no-radius {
     border-radius: 0 !important;
   }
