--- a/_sass/bootstrap/_images.scss
+++ b/_sass/bootstrap/_images.scss
@@ -129,3 +129,7 @@
     width: 100%;
   }
 }
+
+.white-border {
+  border: 4px solid white;
+}
