--- a/_sass/bootstrap/mixins/_background-variant.scss
+++ b/_sass/bootstrap/mixins/_background-variant.scss
@@ -85,3 +85,7 @@
 .bg-deep-taupe {
   background-color: $deep-taupe;
 }
+
+.bg-jet {
+  background-color: $jet;
+}
